src/test/deca/context/invalid/created/SansObjet/MethodCall.deca
// Description:
// Invalid method call
// Resultats:
// MethodCall.deca:9:8: Error: MethodCall identifer must be a method

class A {
    int b;
    void a(){
        b();
    }
}

{

}